# scratch

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt
case_3m/case/: etl_process.py  model.py
case_3m/data/: marketing_campaign_wines.xlsx
case_3m/notebooks/: eda_3m.ipynb  model_analysis.ipynb
leet_code/: leet_codes.ipynb  rotate_image.py  same_tree.py  search_insert_position.py  single_number.py  subsets.py  two_sum.py
offerfit-takehome/: OfferFit_Python_Assignment_andrey_souza.py  OfferFit_Python_Assignment_your_name_no_spaces.txt  source.py
